--- a/intranet/conf.d/default.conf
+++ b/intranet/conf.d/default.conf
@@ -31,21 +31,7 @@ server {
 
     ssl_client_certificate /etc/nginx/ca-cert-trajano.pem;
     ssl_verify_client on;
-
-    # OCSP stapling
-    ssl_stapling on;
-    ssl_stapling_verify on;
     resolver 127.0.0.11;
 
-    location /swarm/ {
-        rewrite ^/swarm/(.*) /$1  break;
-        proxy_pass http://dashboard:8080/$uri$is_args$args;
-    }
-
-    location /stream {
-        proxy_pass http://dashboard:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
+    include /etc/nginx/location.d/*.conf;
 }
