--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -6,6 +6,8 @@ version: '3.4'
 services:
   nexus:
     image: sonatype/nexus3
+    environment:
+    - NEXUS_CONTEXT=nexus
     ports:
     - target: 8081
       published: 8081
