--- a/intranet/intranet/Dockerfile
+++ b/intranet/intranet/Dockerfile
@@ -4,4 +4,5 @@ VOLUME /etc/letsencrypt
 COPY conf.d/* /etc/nginx/conf.d/
 COPY location.d/* /etc/nginx/location.d/
 COPY ca-cert-trajano.pem /etc/nginx/
+COPY index.html /
 HEALTHCHECK --start-period=5s CMD wget -q http://localhost/ping -O /dev/null || exit 1
