--- a/intranet/intranet/conf.d/default.conf
+++ b/intranet/intranet/conf.d/default.conf
@@ -33,5 +33,10 @@ server {
     ssl_verify_client on;
     resolver 127.0.0.11;
 
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+
     include /etc/nginx/location.d/*.conf;
 }
