--- a/intranet/intranet/location.d/dashboard.conf
+++ b/intranet/intranet/location.d/dashboard.conf
@@ -4,7 +4,9 @@ location /swarm/ {
 }
 
 location /stream {
-    proxy_pass http://dashboard:8080;
+    resolver 127.0.0.11 valid=30s;
+    set $backend "http://dashboard:8080";
+    proxy_pass $backend;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
