--- a/intranet/intranet/location.d/grafana.conf
+++ b/intranet/intranet/location.d/grafana.conf
@@ -1,5 +1,9 @@
 location /grafana {
-     proxy_pass http://grafana:3000;
-     rewrite  ^/grafana/(.*)  /$1 break;
-     proxy_set_header   Host $host;
+    
+    resolver 127.0.0.11 valid=30s;
+    set $backend "http://grafana:3000";
+    proxy_pass $backend;
+    rewrite  ^/grafana/(.*)  /$1 break;
+    proxy_set_header   Host $host;
+    proxy_set_header   X-WEBAUTH-USER $ssl_client_s_dn;
 }
