--- a/intranet/docker-compose.yml
+++ b/intranet/docker-compose.yml
@@ -19,10 +19,9 @@ services:
     environment:
     - TZ=America/Toronto
     - HTTPVAL=true
-    networks: 
+    networks:
     - public
     - default
-    - mon
   dashboard:
     image: charypar/swarm-dashboard
     volumes:
@@ -34,7 +33,43 @@ services:
       placement:
         constraints:
         - node.role == manager
+  grafana:
+    image: trajano.net/swarmprom-grafana
+    networks:
+    - mon
+    - default
+    environment:
+    - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
+    - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+    - GF_USERS_ALLOW_SIGN_UP=false
+    - GF_SERVER_DOMAIN=i.trajano.net
+    - GF_SERVER_ROOT_URL=%(protocol)s://%(domain)s:/grafana
+    - GF_AUTH_PROXY_ENABLED=true
+    - GF_AUTH_PROXY_HEADER_NAME=X-WEBAUTH-USER
+    - GF_AUTH_PROXY_HEADER_PROPERTY=username
+    - GF_AUTH_PROXY_AUTO_SIGN_UP=true
+    #- GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-localhost}
+    #- GF_SMTP_ENABLED=${GF_SMTP_ENABLED:-false}
+    #- GF_SMTP_FROM_ADDRESS=${GF_SMTP_FROM_ADDRESS:-grafana@test.com}
+    #- GF_SMTP_FROM_NAME=${GF_SMTP_FROM_NAME:-Grafana}
+    #- GF_SMTP_HOST=${GF_SMTP_HOST:-smtp:25}
+    #- GF_SMTP_USER=${GF_SMTP_USER}
+    #- GF_SMTP_PASSWORD=${GF_SMTP_PASSWORD}
+    volumes:
+      - grafana:/var/lib/grafana
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+         - node.role == manager
+      resources:
+        limits:
+          memory: 128M
+        reservations:
+          memory: 64M
 volumes:
+  grafana:
   letsencrypt:
     name: 'noriko/s/letsencrypt'
     driver: cifs
