--- a/intranet/docker-compose.yml
+++ b/intranet/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     - mon
     - default
     - db
+    - cache
     environment:
     - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
     - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
@@ -50,6 +51,9 @@ services:
     - GF_AUTH_PROXY_HEADER_PROPERTY=username
     - GF_AUTH_PROXY_AUTO_SIGN_UP=true
     - GF_DATABASE_URL=mysql://grafana:r4BTIeqCHEj3ObckcbeO@mysql:3306/grafana
+    - GF_SESSION_PROVIDER=redis
+    - GF_SESSION_PROVIDER_CONFIG=addr=redis:6379,pool_size=100,prefix=grafana
+    - GF_SESSION_COOKIE_SECURE=true
     #- GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-localhost}
     #- GF_SMTP_ENABLED=${GF_SMTP_ENABLED:-false}
     #- GF_SMTP_FROM_ADDRESS=${GF_SMTP_FROM_ADDRESS:-grafana@test.com}
@@ -57,8 +61,8 @@ services:
     #- GF_SMTP_HOST=${GF_SMTP_HOST:-smtp:25}
     #- GF_SMTP_USER=${GF_SMTP_USER}
     #- GF_SMTP_PASSWORD=${GF_SMTP_PASSWORD}
-    volumes:
-      - grafana:/var/lib/grafana
+#    volumes:
+#      - grafana:/var/lib/grafana
     deploy:
       mode: replicated
       replicas: 1
@@ -82,6 +86,9 @@ networks:
   db:
     external:
       name: db_default
+  cache:
+    external:
+      name: cache_default
   public:
     external:
       name: public
