--- a/intranet/docker-compose.yml
+++ b/intranet/docker-compose.yml
@@ -54,6 +54,9 @@ services:
     - GF_SESSION_PROVIDER=redis
     - GF_SESSION_PROVIDER_CONFIG=addr=redis:6379,pool_size=100,prefix=grafana
     - GF_SESSION_COOKIE_SECURE=true
+    - GF_SMTP_ENABLED=true
+    - GF_SMTP_HOST=smtp
+    - GF_SMTP_FROM_ADDRESS=grafana@trajano.net
     #- GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-localhost}
     #- GF_SMTP_ENABLED=${GF_SMTP_ENABLED:-false}
     #- GF_SMTP_FROM_ADDRESS=${GF_SMTP_FROM_ADDRESS:-grafana@test.com}
