--- a/intranet/intranet/location.d/jenkins.conf
+++ b/intranet/intranet/location.d/jenkins.conf
@@ -1,12 +1,46 @@
-location /jenkins {
+AllowEncodedSlashes NoDecode
+ProxyPass         /jenkins  http://jenkins:8080/jenkins nocanon
+ProxyPassReverse  /jenkins  http://jenkins:8080/jenkins
+ProxyPassReverse  /jenkins  https://i.trajano.net/jenkins
+<Proxy http://jenkins:8080/jenkins*>
+    Order deny,allow
+    Allow from all
+</Proxy>
+<Location /jenkins>
+    RequestHeader unset "X-Forwarded-User"
+    RequestHeader unset "X-Forwarded-Groups"
+    # Remove the basic authorization header to avoid to use it in Jenkins
+    RequestHeader unset "Authorization"
     
-    resolver 127.0.0.11 valid=30s;
-    set $backend "http://jenkins:8080";
-    proxy_pass $backend;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_redirect $backend $scheme://i.trajano.net;
-    proxy_set_header   Host $host;
-    proxy_set_header X-Forwarded-User $ssl_client_s_dn;
-    # Groups are separated by |
-    proxy_set_header  X-Forwarded-Groups users;
-}
+    RequestHeader set X-Forwarded-User "%{SSL_CLIENT_S_DN_Email}s"
+    RequestHeader set X-Forwarded-Groups "users"
+    RequestHeader set X-Forwarded-Proto "https"
+    RequestHeader set X-Forwarded-Port "443"
+</Location>
+<Location /jenkins/assets>
+    Require all granted
+</Location>
+<Location /jenkins/avatar-cache>
+    Require all granted
+</Location>
+<Location /jenkins/cli>
+    Require all granted
+</Location>
+<Location /jenkins/git>
+    Require all granted
+</Location>
+<Location /jenkins/github-webhook>
+    Require all granted
+</Location>
+<Location /jenkins/instance-identity>
+    Require all granted
+</Location>
+<Location /jenkins/jnlpJars>
+    Require all granted
+</Location>
+<Location /jenkins/whoAmI>
+    Require all granted
+</Location>
+<Location /index.html>
+    Require all granted
+</Location>
