--- a/intranet/intranet/location.d/dashboard.conf
+++ b/intranet/intranet/location.d/dashboard.conf
@@ -1,13 +1,2 @@
-location /swarm/ {
-    rewrite ^/swarm/(.*) /$1  break;
-    proxy_pass http://dashboard:8080/$uri$is_args$args;
-}
-
-location /stream {
-    resolver 127.0.0.11 valid=30s;
-    set $backend "http://dashboard:8080";
-    proxy_pass $backend;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-}
+ProxyPass "/swarm" "http://dashboard:8080"
+ProxyPass "/stream" "ws://dashboard:8080/stream"
