--- a/intranet/intranet/location.d/grafana.conf
+++ b/intranet/intranet/location.d/grafana.conf
@@ -1,9 +1,5 @@
-location /grafana {
-    
-    resolver 127.0.0.11 valid=30s;
-    set $backend "http://grafana:3000";
-    proxy_pass $backend;
-    rewrite  ^/grafana/(.*)  /$1 break;
-    proxy_set_header   Host $host;
-    proxy_set_header   X-WEBAUTH-USER $ssl_client_s_dn;
-}
+<Location /grafana/>
+  ProxyPass "http://grafana:3000/"
+  ProxyPassReverse "http://grafana:3000/"
+  RequestHeader set X-WEBAUTH-USER "%{SSL_CLIENT_S_DN}s"
+</Location>
