--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -15,12 +15,10 @@ services:
       published: 8081
       protocol: tcp
   jenkins:
-    build: .
     image: trajano.net/jenkins
-    ports:
-    - target: 8080
-      published: 18080
-      protocol: tcp
+    networks:
+    - default
+    - smtp
     volumes:
     - jenkins_home:/var/jenkins_home
 volumes:
@@ -35,3 +33,7 @@ volumes:
     driver_opts:
 #      o: dynperm,cifsacl
       voluri: "store1,store2:trajano/jenkins"
+networks:
+  smtp:
+    external:
+      name: smtp_default
