--- a/intranet/docker-compose.yml
+++ b/intranet/docker-compose.yml
@@ -1,11 +1,6 @@
 #docker stack deploy -c docker-compose.yml --with-registry-auth trajano
 #docker run -v noriko/s/letsencrypt:/etc/letsencrypt --volume-driver cifs trajano.net/web
 version: '3.4'
-configs:
-  node_rules:
-    file: ./prometheus/rules/swarm_node.rules.yml
-  task_rules:
-    file: ./prometheus/rules/swarm_task.rules.yml
 services:
   intranet:
     image: trajano.net/intranet
@@ -17,8 +12,6 @@ services:
       placement:
         constraints:
           - node.role != manager
-    ports:
-    - "444:443"
     volumes:
     - letsencrypt:/etc/letsencrypt
     environment:
@@ -78,40 +71,12 @@ services:
       replicas: 1
       placement:
         constraints:
-         - node.role == manager
+         - node.role != manager
       resources:
         limits:
           memory: 128M
         reservations:
           memory: 64M
-  prometheus:
-    image: trajano.net/swarmprom-prometheus
-    networks:
-    - mon
-    command:
-    - '--config.file=/etc/prometheus/prometheus.yml'
-    - '--web.console.libraries=/etc/prometheus/console_libraries'
-    - '--web.console.templates=/etc/prometheus/consoles'
-    - '--storage.tsdb.path=/prometheus'
-    - '--storage.tsdb.retention=24h'
-    volumes:
-    - prometheus:/prometheus
-    configs:
-    - source: node_rules
-      target: /etc/prometheus/swarm_node.rules.yml
-    - source: task_rules
-      target: /etc/prometheus/swarm_task.rules.yml
-    deploy:
-      mode: replicated
-      replicas: 1
-      placement:
-        constraints:
-        - node.role != manager
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 128M
 volumes:
   grafana:
   prometheus:
@@ -126,7 +91,7 @@ networks:
       name: ci_default
   mon:
     external:
-      name: mon_net
+      name: mon_default
   smtp:
     external:
       name: smtp_default
