--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -13,10 +13,19 @@ services:
     - smtp
     volumes:
     - nexus-data:/nexus-data
-#    ports:
-#    - target: 8081
-#      published: 8081
-#      protocol: tcp
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 10s
+      resources:
+        limits:
+          memory: 1024M
+        reservations:
+          memory: 512M
+#      placement:
+#        constraints:
+#        - node.role == worker
   jenkins:
     image: trajano.net/jenkins
     networks:
@@ -24,18 +33,24 @@ services:
     - smtp
     volumes:
     - jenkins_home:/var/jenkins_home
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 10s
+      resources:
+        limits:
+          memory: 512M
+      placement:
+        constraints:
+        - node.role == worker
 volumes:
   nexus-data:
     driver: gluster
-    driver_opts:
-      voluri: "store1:trajano/nexus"
+    name: "trajano/nexus"
   jenkins_home:
     driver: gluster
-#    driver: cifs
-#    name: 'noriko/s/jenkins'
-    driver_opts:
-#      o: dynperm,cifsacl
-      voluri: "store1,store2:trajano/jenkins"
+    name: "trajano/jenkins"
 networks:
   smtp:
     external:
