--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -25,6 +25,8 @@ volumes:
   db-data:
     name: 'noriko/s/wpdb'
     driver: cifs
+    driver_opts:
+      cifsopts: vers=3.02,mfsymlinks,file_mode=0666,dir_mode=0777
 networks:
   default:
     driver: overlay
