--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,9 +47,13 @@ volumes:
   registry:
     name: 'noriko/s/registry'
     driver: cifs
+    driver_opts:
+      cifsopts: vers=3.02,mfsymlinks,file_mode=0666,dir_mode=0777
   letsencrypt:
     name: 'noriko/s/letsencrypt'
     driver: cifs
+    driver_opts:
+      cifsopts: vers=3.02,mfsymlinks,file_mode=0666,dir_mode=0777
 networks:
   public:
     external:
