--- a/mon/docker-compose.yml
+++ b/mon/docker-compose.yml
@@ -122,6 +122,8 @@ volumes:
   alertmanager:
     name: 'noriko/s/alertmanager'
     driver: cifs
+    driver_opts:
+      cifsopts: vers=3.02,mfsymlinks,file_mode=0666,dir_mode=0777
   prometheus:
     name: trajano/prometheus
     driver: gluster
