--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+# This stack is used to build up the rest of the other stacks.  It contains the main entry point to access the registry and the
+# intranet along with Portainer and the swarm dashboard which does not require any other stacks to be present.
 #docker stack deploy -c docker-compose.yml --with-registry-auth trajano
 #docker run -v noriko/s/letsencrypt:/etc/letsencrypt --volume-driver cifs trajano.net/web
 version: '3.4'
@@ -43,18 +45,64 @@ services:
     networks: 
     - public
     - default
+  intranet:
+    image: trajano.net/intranet
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: any
+        delay: 10s
+      placement:
+        constraints:
+          - node.role != manager
+    volumes:
+    - letsencrypt:/etc/letsencrypt
+    environment:
+    - TZ=America/Toronto
+    - HTTPVAL=true
+    networks:
+    - default
+    - intranet
+  dashboard:
+    image: charypar/swarm-dashboard
+    volumes:
+    - "/var/run/docker.sock:/var/run/docker.sock"
+    networks:
+    - intranet
+    environment:
+      PORT: 8080
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+        - node.role == manager
+  portainer:
+    image: portainer/portainer
+    command: --no-auth -H unix:///var/run/docker.sock
+    deploy:
+      placement:
+        constraints:
+         - node.role == manager
+    networks:
+    - intranet
+    - default
+    volumes:
+    - "/var/run/docker.sock:/var/run/docker.sock"
+    - portainer:/data
 volumes:
   registry:
     name: 'noriko/s/registry'
     driver: cifs
-    driver_opts:
-      cifsopts: vers=3.02,mfsymlinks,file_mode=0666,dir_mode=0777
   letsencrypt:
     name: 'noriko/s/letsencrypt'
     driver: cifs
-    driver_opts:
-      cifsopts: vers=3.02,mfsymlinks,file_mode=0666,dir_mode=0777
+  portainer:
+    name: 'noriko/s/portainer'
+    driver: cifs
 networks:
   public:
     external:
       name: public
+  intranet:
+    external:
+      name: intranet
