--- a/intranet/location.d/jenkins.conf
+++ b/intranet/location.d/jenkins.conf
@@ -1,5 +1,5 @@
 AllowEncodedSlashes NoDecode
-ProxyPass         /jenkins  http://jenkins:8080/jenkins nocanon
+ProxyPass         /jenkins  http://jenkins:8080/jenkins nocanon disablereuse=On
 ProxyPassReverse  /jenkins  http://jenkins:8080/jenkins
 ProxyPassReverse  /jenkins  https://i.trajano.net/jenkins
 <Proxy http://jenkins:8080/jenkins*>
