--- a/intranet/location.d/nexus.conf
+++ b/intranet/location.d/nexus.conf
@@ -1,4 +1,4 @@
-ProxyPass         /nexus  http://nexus:8081/nexus nocanon
+ProxyPass         /nexus  http://nexus:8081/nexus nocanon disablereuse=On
 ProxyPassReverse  /nexus  http://nexus:8081/nexus
 ProxyPassReverse  /nexus  https://i.trajano.net/nexus
 <Proxy http://nexus:8080/nexus*>
