--- a/intranet/location.d/grafana.conf
+++ b/intranet/location.d/grafana.conf
@@ -1,5 +1,5 @@
 <Location /grafana/>
-  ProxyPass "http://grafana:3000/"
-  ProxyPassReverse "http://grafana:3000/"
+  ProxyPass http://grafana:3000/ disablereuse=On
+  ProxyPassReverse http://grafana:3000/
   RequestHeader set X-WEBAUTH-USER "%{SSL_CLIENT_S_DN}s"
 </Location>
