--- a/smtp/docker-compose.yml
+++ b/smtp/docker-compose.yml
@@ -1,9 +1,10 @@
-#docker stack deploy -c docker-compose.yml --with-registry-auth trajano
-#docker run -v noriko/s/letsencrypt:/etc/letsencrypt --volume-driver cifs trajano.net/web
 version: '3.4'
 services:
   smtp:
     image: trajano.net/smtp
+    configs:
+    - source: main_cf
+      target: /etc/postfix/main.cf
     deploy:
       replicas: 2
       restart_policy:
@@ -12,7 +13,23 @@ services:
       placement:
         constraints:
         - node.role != manager
+    secrets:
+    - sasl_passwd
+    networks:
+    - default
+    - backend
 networks:
   default:
     driver: overlay
     attachable: true
+  backend:
+    external:
+      name: backend
+secrets:
+  sasl_passwd:
+    external:
+      name: sasl_passwd
+configs:
+  main_cf:
+    external:
+      name: postfix_main_cf
